# hacutils

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml  setup.py
src/hacutils/: __init__.py  db.py  misc.py  network.py  term.py
src/hacutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_config.py  test_db.py  test_nginx.py
tests/resources/: config.cfg  gen_config.cfg
