[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hacutils"
version = "0.2.5"
description = "Personal utility library. Short for Henryotoole's Ars Commoditas."
dependencies = [
	"pendulum",
	"requests",
	"SQLAlchemy"
]
authors = [
	{name = "Josh Reed"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
	'Operating System :: POSIX :: Linux',
	'Programming Language :: Python :: 3',
	'Intended Audience :: Developers'
]

[project.urls]
Repository = "https://github.com/henryotoole/hacutils"